@@ -12,6 +12,14 @@ and     INCOMPATIBLE CHANGES IN BOGOFILTER 0.93
 
 0.93.0	2004-10-??
 
+	2004-10-29
+
+	* Attempting recovery with TDB or QDBM data bases results in an error,
+	  so the user does not believe it would have succeeded.
+
+	* Document that recovery only works for Berkeley DB, but not TDB or
+	  QDBM.
+
 	2004-10-28
 
 	* Merged Transactional branch (for BerkeleyDB) back into the trunk.
